--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,14 +1,14 @@
 version: 2.1
 
 description: >
-  Sample orb description
+  This orb takes an SBOM and will transmit it to an organization's Manifest Cyber account.
 # What will your orb allow users to accomplish?
 # Descriptions should be short, simple, and informative.
 
 # This information will be displayed in the orb registry and is not mandatory.
 display:
-  home_url: "https://www.example.com/docs"
-  source_url: "https://github.com/<organization>/<project-name>"
+  home_url: "https://manifestcyber.com"
+  source_url: "https://github.com/manifest-cyber/manifest-circle-orb/"
 
 # If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
 # orbs:
