--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -16,7 +16,9 @@ jobs:
     steps:
       - checkout
       # Run your orb's commands to validate them.
-      - manifest/transmit
+      - manifest/transmit: 
+          apiKey: $MANIFEST_API_KEY
+          bomFilePath: "./bom.json"
 workflows:
   test-deploy:
     jobs:
