--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -34,7 +34,7 @@ workflows:
           requires:
             - orb-tools/pack
             - command-tests
-          context: <publishing-context>
+          context: orb-publishing
           filters:
             branches:
               ignore: /.*/
