--- a/src/commands/transmit.yml
+++ b/src/commands/transmit.yml
@@ -11,6 +11,7 @@ parameters:
     description: "The path to a valid bom file"
 steps:
   - run:
+      shell: /usr/bin/python3
       environment:
         MANIFEST_API_KEY: <<parameters.apiKey>>
         BOM_FILEPATH: <<parameters.bomFilePath>>
