--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -18,7 +18,7 @@ jobs:
       # Run your orb's commands to validate them.
       - manifest/transmit: 
           apiKey: $MANIFEST_API_KEY
-          bomFilePath: "./bom.json"
+          bomFilePath: "./example-bom/bom.json"
 workflows:
   test-deploy:
     jobs:
