--- a/src/commands/transmit.yml
+++ b/src/commands/transmit.yml
@@ -10,6 +10,8 @@ parameters:
     type: string
     description: "The path to a valid bom file"
 steps:
+  - python/install-packages:
+      pkg-manager: pip
   - run:
       shell: /usr/bin/python3
       environment:
