--- a/src/commands/transmit.yml
+++ b/src/commands/transmit.yml
@@ -11,6 +11,7 @@ parameters:
     description: "The path to a valid bom file"
 steps:
   - run:
+      name: pip install
       command: pip install requests
   - run:
       shell: /usr/bin/python3
