--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -15,6 +15,6 @@ usage:
         - run: npm ci
         - run: npm run build:bom
         - manifest/transmit:
-            apiKey: $MANIFEST_API_KEY
+            apiKey: ${MANIFEST_API_KEY}
             bomFilePath: "./bom.json"
 
