--- a/src/commands/transmit.yml
+++ b/src/commands/transmit.yml
@@ -3,9 +3,6 @@ description: >
 # What will this command do?
 # Descriptions should be short, simple, and clear.
 parameters:
-  apiKey:
-    type: string
-    description: "An API key for Manifest"
   bomFilePath:
     type: string
     description: "The path to a valid bom file"
@@ -13,7 +10,7 @@ steps:
   - run:
       shell: /usr/bin/python3
       environment:
-        MANIFEST_API_KEY: <<parameters.apiKey>>
+        MANIFEST_API_KEY: $MANIFEST_API_KEY
         BOM_FILEPATH: <<parameters.bomFilePath>>
       name: Transmit SBOM
       command: <<include(scripts/transmit.py)>>
