--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -17,6 +17,7 @@ jobs:
       - checkout
       # Run your orb's commands to validate them.
       - manifest/transmit: 
+          apiKey: ${MANIFEST_API_KEY}
           bomFilePath: "./example-bom/bom.json"
 workflows:
   test-deploy:
