feat: add syft install

--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -14,6 +14,7 @@ usage:
         - checkout
         - run: npm ci
         - run: npm run build:bom
+        - sbom-transmitter/install-syft:
         - sbom-transmitter/transmit:
             bomFilePath: "./bom.json"
 
