--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -18,6 +18,7 @@ jobs:
       # Run your orb's commands to validate them.
       - sbom-transmitter/transmit: 
           bomFilePath: "./example-bom/bom.json"
+      - sbom-transmitter/install-syft:
 workflows:
   test-deploy:
     jobs:
