--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -15,6 +15,9 @@ usage:
         - run: npm ci
         - run: npm run build:bom
         - run: sbom-transmitter/install-syft
+        - run: sbom-transmitter/run-syft:
+            purl: "./"
+            file: "./bom.json"
         - sbom-transmitter/transmit:
             bomFilePath: "./bom.json"
 
