--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -15,7 +15,7 @@ usage:
         - run: npm ci
         - run: npm run build:bom
         - run: sbom-transmitter/install-syft
-        - run: sbom-transmitter/run-syft:
+        - sbom-transmitter/run-syft:
             purl: "./"
             file: "./bom.json"
         - sbom-transmitter/transmit:
