--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -15,6 +15,7 @@ jobs:
       - image: ubuntu
     steps:
       - checkout
+      - run: apt-get update && apt-get install -y curl
       # Run your orb's commands to validate them.
       - sbom-transmitter/install-syft
       - sbom-transmitter/run-syft:
