--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -12,10 +12,9 @@ jobs:
   # You may want to add additional validation steps to ensure the commands are working as expected.
   command-tests:
     docker:
-      - image: ubuntu
+      - image: cimg/base:current
     steps:
       - checkout
-      - run: apt-get update && apt-get install -y curl
       # Run your orb's commands to validate them.
       - sbom-transmitter/install-syft
       - sbom-transmitter/run-syft:
