--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -16,9 +16,12 @@ jobs:
     steps:
       - checkout
       # Run your orb's commands to validate them.
+      - run: ls
+      - run: ls ../
+      - run: ls ../../
       - sbom-transmitter/install-syft
       - sbom-transmitter/run-syft:
-          purl: "./example-python"
+          purl: "../example-python"
           file: "sbom.json"
       - sbom-transmitter/transmit: 
           bomFilePath: "./example-bom/bom.json"
