--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -21,6 +21,8 @@ jobs:
           purl: ./example-python
           file: sbom.json
       - sbom-transmitter/transmit: 
+          bomFilePath: sbom.json
+      - sbom-transmitter/transmit: 
           bomFilePath: "./example-bom/bom.json"
 
 workflows:
