--- a/src/commands/transmit.yml
+++ b/src/commands/transmit.yml
@@ -3,13 +3,13 @@ description: >
 # What will this command do?
 # Descriptions should be short, simple, and clear.
 parameters:
-  bomFilePath:
+  sbom-file-path:
     type: string
     description: "The path to a valid bom file"
 steps:
   - run:
       shell: /usr/bin/python3
       environment:
-        BOM_FILEPATH: <<parameters.bomFilePath>>
+        SBOM_FILEPATH: <<parameters.sbom-file-path>>
       name: Transmit SBOM
       command: <<include(scripts/transmit.py)>>
