--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -18,5 +18,6 @@ usage:
         - sbom-transmitter/run-syft:
             purl: "./"
             file: "./bom.json"
+            name: "demo-sbom"
         - sbom-transmitter/transmit:
             sbom-file-path: "./bom.json"
