--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -18,7 +18,7 @@ jobs:
       # Run your orb's commands to validate them.
       - sbom-transmitter/install-syft
       - sbom-transmitter/run-syft:
-          purl: ./example-python
+          source: ./example-python
           file: sbom.json
           sbom-name: demo-sbom-v1.0.0
       - sbom-transmitter/transmit: 
