--- a/src/examples/transmit-node-bom.yml
+++ b/src/examples/transmit-node-bom.yml
@@ -16,8 +16,10 @@ usage:
         - run: npm run build:bom
         - run: sbom-transmitter/install-syft
         - sbom-transmitter/run-syft:
-            purl: "./"
+            source: "./"
             file: "./bom.json"
-            sbom-name: "demo-sbom"
+            # NOTE: using default CIRCLE_CI values, uncomment for force:
+            # sbom-name: "demo-sbom"
+            # sbom-version: "1.0.0"
         - sbom-transmitter/transmit:
             sbom-file-path: "./bom.json"
