--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -20,7 +20,9 @@ jobs:
       - sbom-transmitter/run-syft:
           source: ./example-python
           file: sbom.json
-          sbom-name: demo-sbom-v1.0.0
+          # NOTE: using default CIRCLE_CI values, uncomment for force:
+          # sbom-name: "demo-sbom"
+          # sbom-version: "1.0.0"
       - sbom-transmitter/transmit: 
           sbom-file-path: sbom.json
       - sbom-transmitter/transmit: 
