feat: default name and version

--- a/.circleci/test-deploy.yml
+++ b/.circleci/test-deploy.yml
@@ -23,7 +23,7 @@ jobs:
           # NOTE: using default CIRCLE_CI values, uncomment for force:
           # sbom-name: "demo-sbom"
           # sbom-version: "1.0.0"
-          sbom-output: spdx-json
+          # sbom-output: spdx-json
       - sbom-transmitter/transmit: 
           sbom-file-path: sbom.json
       - sbom-transmitter/transmit: 
