--- a/src/@orb.yml
+++ b/src/@orb.yml
@@ -1,15 +1,7 @@
 version: 2.1
 
 description: >
-  This orb generates an SBOM and can transmit it to an organization's Manifest Cyber account.
-# What will your orb allow users to accomplish?
-# Descriptions should be short, simple, and informative.
-
-# This information will be displayed in the orb registry and is not mandatory.
+  This is a legacy version of our Orb and is considered deprecated. We recommend using our [updated Orb here](https://circleci.com/developer/orbs/orb/manifest/sbom).
 display:
   home_url: "https://manifestcyber.com"
   source_url: "https://github.com/manifest-cyber/manifest-circle-orb/"
-
-# If your orb requires other orbs, you can import them like this. Otherwise remove the "orbs" stanza.
-# orbs:
-#  hello: circleci/hello-build@0.0.5
